Update JanelaRedes.java